# Prompt-BERT

./: .gitignore  README.md  eval_only.sh  main.py  pyproject.toml  run.sh  setup.sh  setup_auto.sh
SentEval/senteval/: sts.py
